--- a/homepage/home.css
+++ b/homepage/home.css
@@ -135,7 +135,7 @@ body {
 }
 
 header {
-  background: lightslategray;
+  background: powderblue;
 }
 
 header::after {
@@ -182,7 +182,7 @@ nav a::before {
   content: "";
   display: block;
   height: 5px;
-  background-color: #444;
+  background-color: steelblue;
 
   position: absolute;
   top: 0;
@@ -193,4 +193,53 @@ nav a::before {
 
 nav a:hover::before {
   width: 100%;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: mintcream;
+  margin: 15% auto;
+  padding: 30px;
+  border: 1px solid skyblue;
+  width: 40%;
+  font-size: 18px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  position: relative;
+  display: inline-block;
+  background: skyblue;
+  color: #444;
+  font-family: cursive;
+  font-size: 13px;
+  font-weight: 300;
+  margin-block-start: 10px;
+  padding: 6px 17px;
+  text-transform: uppercase;
 }
